# vanguard-infrastructure

./: .gitignore  Cargo.toml  LICENSE  README.md
aegis/: .gitignore  Cargo.toml  README.md  prometheus.yml
aegis-mock/: Cargo.toml
aegis/src/: main.rs  otel.rs  ring_buffer.rs
celer/: Cargo.toml
celer/src/: ast.rs  index.html  lexer.rs  main.rs  otel.rs
chronos/: Cargo.toml  README.md
chronos/src/: engine.rs  main.rs  parser.rs  server.rs
core_systems/: .gitignore
core_systems/aegis/: LICENSE  docker-compose.yml
core_systems/celer/: Cargo.toml
core_systems/celer/src/: index.html  ring_buffer.rs
core_systems/chronos/: .gitignore  Cargo.toml  README.md
core_systems/chronos/src/: main.rs  server.rs
prototypes/ryuu_backend/: Cargo.toml
prototypes/ryuu_backend/src/: main.rs
shared-ipc/: Cargo.toml
shared-ipc/examples/: throughput.rs
shared-ipc/src/: lib.rs
