[workspace]
resolver = "2"

members = [
    "aegis",
    "celer",
    "chronos",
    "aegis-mock",
]

[workspace.dependencies]
tokio = { version = "1.50", features = ["full"] }
tokio-uring = "0.5.0"
# ESTA LÍNEA ES LA CLAVE: activamos las syscalls de bajo nivel
nix = { version = "0.31.2", features = ["fs", "socket", "net", "uio", "mman", "hostname", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = { version = "0.4", features = ["websocket", "server"] }
futures-util = { version = "0.3", features = ["sink"] }
memmap2 = "0.9.10"
core_affinity = "0.8.3"
socket2 = "0.6.3"