[workspace]
resolver = "2"

# Aquí declaramos todas las carpetas que contienen un Cargo.toml
members = [
    "aegis",
    "aegis-mock",
    "celer",
    "chronos",
    "prototypes/ryuu_backend",
]

[workspace.dependencies]
tokio = { version = "1.30", features = ["full"] }
tokio-uring = "0.5.0"
nix = { version = "0.27", features = ["fs", "socket", "net", "uio", "mman", "hostname", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = { version = "0.3", features = ["websocket"] }
futures-util = { version = "0.3", features = ["sink"] }
memmap2 = "0.9"
core_affinity = "0.8"
socket2 = "0.6.3"