[package]
name = "aegis_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-ipc = { path = "../shared-ipc" }
tokio = { workspace = true }
tokio-uring = { workspace = true }
nix = { workspace = true }
memmap2 = { workspace = true }
core_affinity = { workspace = true }
socket2 = { workspace = true }
tokio-tungstenite = "0.29.0"
futures-util = "0.3"