[package]
name = "aegis_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-ipc = { path = "../shared-ipc" }
tokio = { workspace = true }
tokio-uring = { workspace = true }
nix = { workspace = true }
memmap2 = { workspace = true }
core_affinity = { workspace = true }
socket2 = { workspace = true }
tokio-tungstenite = "0.29.0"
futures-util = "0.3"

# Observability (task 1.6)
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }