[package]
name = "celer_mock"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-ipc = { path = "../shared-ipc" }
tokio = { workspace = true, features = ["full"] }
nix = { workspace = true }
memmap2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
warp = { version = "0.4", features = ["server", "websocket"] }
futures-util.workspace = true
logos = "0.16.1"