[package]
name = "celer_mock"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
nix = { workspace = true }
memmap2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
warp = { workspace = true, features = ["websocket", "server"] }
futures-util.workspace = true
